# semver_bump

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.sh  script.sh
src/: main.rs
